# CTorrent

./: CMakeLists.txt
include/: bencode.h  cryptography.h
src/: bencode.c  cryptography.c  main.c
